@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 17-09-2006 fixed: better handling of mpegs that don't have a start pts of 0
   - 17-09-2006 fixed: some video's would not return current time, even thou they had total time and current percentage
   - 17-09-2006 fixed: rewind on some movies would just lock picture untill a fastforward request was made
   - 17-09-2006 added: support for udp:// protocol, can only be used for targeted streaming directly to the xbox
